--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
+    "@types/lodash": "^4.14.178",
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "bootstrap": "^5.1.3",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.24.1",
+    "react-query": "^3.34.8",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-use": "^17.3.2",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
