--- a/.github/workflows/master_tsplay.yml
+++ b/.github/workflows/master_tsplay.yml
@@ -21,17 +21,16 @@ jobs:
         with:
           node-version: '16.x'
 
-      - name: npm install, build, and test
+      - name: npm install, build
         run: |
           npm install
           npm run build --if-present
-          npm run test --if-present
       
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: ./build
 
   deploy:
     runs-on: ubuntu-latest
@@ -51,6 +50,5 @@ jobs:
         id: deploy-to-webapp
         with:
           app-name: 'tsplay'
-          slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_71761999295444F9BD18874DDE7538D0 }}
           package: .
